# prostate-cancer-grade-assessment-challenge

./: .gitignore  Pipfile  comandline.txt  config.yml  pyproject.toml  run_prep.py  test.py  train.py  tt.py
hydra_output/.hydra/: config.yaml  hydra.yaml  overrides.yaml
notebook/: Check_score.ipynb  Check_score_2.ipynb  eda-panda.ipynb
src/: evaluate_2.py  run_prep.py  run_prep_2.py  run_preprocess.py  test.py  train.py  train_2.py  train_fromjpg.py  train_fromjpg_2.py  train_fromjpg_binning.py
src/model/: __init__.py  model.py
src/utils/: __init__.py  dataset.py  image_transform.py  model.py  preprocessing.py  qwk.py  radam.py  santa.py  trainer.py  utils.py
